PostgreSQL #5 - added test mock
